# advent-of-code-2021

./: README.md
common/: common.cabal
common/Text/ParserCombinators/ReadP/: Unambiguous.hs
day01/: Day01.hs  day01.cabal
day02/: Day02.hs  day02.cabal
day03/: Day03.hs  day03.cabal
day04/: Board.hs  Day04.hs  Input.hs  Number.hs  day04.cabal
day05/: Chart.hs  Day05.hs  Input.hs  day05.cabal
day06/: Day06.hs  day06.cabal
day07/: Cost.hs  Day07.hs  State.hs  day07.cabal
day08/: Day08.hs  Digit.hs  Encoder.hs  Signal.hs  day08.cabal
day09/: Day09.hs  day09.cabal
day10/: Day10.hs  day10.cabal
day11/: Day11.hs  day11.cabal
day12/: Day12.hs  Edge.hs  Explore.hs  Graph.hs  Node.hs  Path.hs  day12.cabal
day13/: Day13.hs  Instruction.hs  Sheet.hs  day13.cabal
day14/: Day14.hs  State.hs  day14.cabal  default.nix
day15/: Day15.hs  Dijkstra.hs  Graph.hs  IntPQueue.hs  LeastCostTree.hs  PriorityQueue.hs  day15.cabal
day16/: Day16.hs  Packet.hs  day16.cabal
day17/: Day17.hs  day17.cabal
day18/: Day18.hs  Tree.hs  day18.cabal
day19/: Day19.hs  Network.hs  Point.hs  PointCloud.hs  Scanner.hs  day19.cabal
day20/: Bit.hs  Day20.hs  Image.hs  day20.cabal
day21/: Day21.hs  Deterministic.hs  Dirac.hs  Player.hs  day21.cabal
day22/: Day22.hs  day22.cabal
day23/: Burrow.hs  Day23.hs  day23.cabal
day24/: Day24.hs  Expression.hs  Instruction.hs  Operation.hs  README.md  Register.hs  day24.cabal  default.nix
day25/: Day25.hs  day25.cabal
