cabal-version: 1.12

name:           day06
version:        0.0.0
build-type:     Simple

executable day06
  main-is: Day06.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts -with-rtsopts=-N
  data-files:
    input
  other-modules:
    Paths_day06
  build-depends:
    base >=4.7 && <5,
    containers
  default-language: Haskell2010
