cabal-version: 1.12

name:           day08
version:        0.0.0
build-type:     Simple

executable day08
  main-is: Day08.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts -with-rtsopts=-N
  data-files:
    input
  other-modules:
    Paths_day08
  build-depends:
    base >=4.7 && <5,
    containers
  default-language: Haskell2010
