cabal-version: 1.12

name:           day15
version:        0.0.0
build-type:     Simple

executable day15
  main-is: Day15.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts -with-rtsopts=-N
  data-files:
    input
  other-modules:
    Paths_day15
    LeastCostTree
    Dijkstra
    Graph
    PriorityQueue
  build-depends:
    base >=4.7 && <5,
    containers
  default-language: Haskell2010
