cabal-version: 1.12

name:           day19
version:        0.0.0
build-type:     Simple

executable day19
  main-is: Day19.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts -with-rtsopts=-N
  data-files:
    input
  other-modules:
    Paths_day19
    Network
    Point
    PointCloud
    Scanner
  build-depends:
    base >=4.7 && <5,
    containers
  default-language: Haskell2010
