cabal-version: 1.12

name:           day20
version:        0.0.0
build-type:     Simple

executable day20
  main-is: Day20.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts -with-rtsopts=-N
  data-files:
    input
  other-modules:
    Paths_day20
  build-depends:
    base >=4.7 && <5,
    containers
  default-language: Haskell2010
