cabal-version: 1.12

name:           day21
version:        0.0.0
build-type:     Simple

executable day21
  main-is: Day21.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts -with-rtsopts=-N
  data-files:
    input
  other-modules:
    Paths_day21
    Deterministic
    Player
    Dirac
  build-depends:
    base >=4.7 && <5,
    containers,
    mtl
  default-language: Haskell2010
