cabal-version: 1.12

name:           day23
version:        0.0.0
build-type:     Simple

executable day23
  main-is: Day23.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts -with-rtsopts=-N
  data-files:
    input
  other-modules:
    Paths_day23
    Burrow
  build-depends:
    base >=4.7 && <5,
    containers,
    unordered-containers,
    hashable,
    mtl,
    common
  default-language: Haskell2010
