cabal-version: 1.12

name:           day24
version:        0.0.0
build-type:     Simple

executable day24
  main-is: Day24.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts -with-rtsopts=-N
  data-files:
    input
  other-modules:
    Paths_day24
    Instruction
    Expression
    Register
    Operation
  build-depends:
    base >=4.7 && <5,
    containers,
    common
  default-language: Haskell2010
