cabal-version: 1.12

name:           day25
version:        0.0.0
build-type:     Simple

executable day25
  main-is: Day25.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts -with-rtsopts=-N
  data-files:
    input
  other-modules:
    Paths_day25
  build-depends:
    base >=4.7 && <5,
    containers,
    unordered-containers,
    hashable,
    mtl,
    common
  default-language: Haskell2010
